--- a/homealone.html
+++ b/homealone.html
@@ -117,7 +117,7 @@
       }
       #contents {
         width: 90%;
-        height: 300px;
+        height: 3000px;
         margin: 0 auto;
         /*border: solid 1px red;*/
       }
@@ -306,5 +306,11 @@
         </ul>
       </div>
     </section>
+    <footer>
+      22261019 김시은
+      계원예술대학교 디지털미디어디자인과
+      @si_eunnie
+      010.8435.****
+    </footer>
   </body>
 </html>
