--- a/homealone.html
+++ b/homealone.html
@@ -204,6 +204,15 @@
         text-align: left;
         display: inline;
       }
+     footer {
+       width: 100%
+       height: 100px;
+       background-color: orange;
+       color: white;
+       font-weight: 500;
+       text-align: left;
+       padding: 10px;
+      }
     </style>
   </head>
   <body>
