--- a/cafe.html
+++ b/cafe.html
@@ -117,7 +117,7 @@
       }
       #contents {
         width: 90%;
-        height: 300px;
+        height: 1000px;
         margin: 0 auto;
         /*border: solid 1px red;*/
       }
@@ -242,6 +242,15 @@
         text-align: left;
         align-items: center;
       }
+      footer {
+       width: 100%
+       height: 100px;
+       background-color: orange;
+       color: white;
+       font-weight: 500;
+       text-align: left;
+       padding: 15px;
+      }
     </style>
   </head>
   <body>
@@ -316,5 +325,14 @@
         <h2>블루 톤의 인테리어로 시선을 끄는 크로플 맛집</h2>
       </div>
     </section>
+    <footer>
+      22261019 김시은
+      <br>
+      계원예술대학교 디지털미디어디자인과
+      <br>
+      @si_eunnie
+      <br>
+      010.8435.****
+    </footer>
   </body>
 </html>
